// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01.space_mission 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "start-tab",
    "title": "Controle op vakjes",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje0 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje1 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje2 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje3 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje4 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje5 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje6 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje7 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje8 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje9 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje10 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje11 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje12 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje13 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje14 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje15 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje16 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje17 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje18 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje19 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje20 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje21 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje22 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje23 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje24 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje25 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje26 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje27 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje28 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje29 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje30 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje31 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje32 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje33 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje34 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje35 is niet veranderd",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "start-tab",
    "title": "Andere vakjes",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Niet geprutst met andere sprites",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-tab",
    "title": "Tests",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Het ruimteschip staat klaar",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "start-tab",
    "title": "Controle op kogels",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje8 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje9 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje10 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje11 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "start-tab",
    "title": "Controle op brandstof",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje20 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje21 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje22 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje23 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`02.pico_desert 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Niet geprutst met ingebouwde sprites",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Laatste level is bereikt",
  },
  Object {
    "command": "start-test",
    "expected": "7",
  },
  Object {
    "command": "close-test",
    "generated": "7",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`03.space_mission_iterations 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Niet geprutst aan vakjes",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Juist",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Niet geprutst met andere sprites",
  },
  Object {
    "command": "start-test",
    "expected": "false",
  },
  Object {
    "command": "close-test",
    "generated": "false",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Niet te veel blokjes",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Gebruik van een lus",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Het ruimteschip staat klaar",
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Druk op toets: 1",
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje8 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje9 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje10 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje11 bevat kogels",
  },
  Object {
    "command": "start-test",
    "expected": "kogels",
  },
  Object {
    "command": "close-test",
    "generated": "kogels",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje20 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "append-message",
    "message": "Vakje20 moet brandstof bevatten",
  },
  Object {
    "command": "close-test",
    "generated": "tile",
    "status": Object {
      "enum": "wrong",
      "human": "Fout",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje21 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje22 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Vakje23 bevat brandstof",
  },
  Object {
    "command": "start-test",
    "expected": "brandstof",
  },
  Object {
    "command": "close-test",
    "generated": "brandstof",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`04.escape_the_cave 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 1 heeft code",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 2 heeft code",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 3 heeft code",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 4 heeft code",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Rots heeft code",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 1 gebruikt de juiste soort lus",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 2 gebruikt de juiste lus",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Hindernis 3 gebruikt de juiste lus",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "start-context",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;
